--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LCL 31st Birthday - Gold & Charcoal Edition</title>
+    <title>LCL 31st Birthday - Max Scale Edition</title>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <style>
         body {
-            background-color: #1a1a1a; /* 深灰色背景 */
+            background-color: #1a1a1a;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -18,13 +18,13 @@
 
         .clock-container {
             position: relative;
-            /* 保持大尺寸置中 */
-            width: 95vw;
-            max-width: 850px; 
+            /* --- 調整大小請改這裡 --- */
+            width: 98vw; 
+            max-width: 1000px; /* 從 850px 放大到 1000px */
+            /* ----------------------- */
             aspect-ratio: 2482 / 3508;
-            filter: drop-shadow(0 30px 60px rgba(0,0,0,0.7));
-            /* 確保手錶在紙屑上方，不被遮擋 */
-            z-index: 10; 
+            filter: drop-shadow(0 40px 80px rgba(0,0,0,0.8));
+            z-index: 10;
         }
 
         .layer {
@@ -45,44 +45,31 @@
             object-fit: contain;
         }
 
-        /* 移至下方的金色質感標題 */
-        #birthday-banner {
-            position: fixed;
-            bottom: 6%; /* 移到畫面下方 */
-            text-align: center;
-            opacity: 0;
-            transition: all 1.5s ease;
-            z-index: 15;
-            width: 100%;
-        }
-
-        #birthday-banner.show {
-            opacity: 1;
-            transform: translateY(-10px);
-        }
-
-        .bday-text, .bday-sub {
+        .gold-metallic-text {
             font-family: 'Georgia', serif;
             font-weight: bold;
             font-style: italic;
-            /* 金屬漸層效果 */
             background: linear-gradient(to bottom, #cfaf6c 0%, #ffecb3 25%, #d1a95a 50%, #f7e0a3 75%, #b38728 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.8));
+            filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.9));
             margin: 0;
+            opacity: 0;
+            transition: all 1.5s ease;
+            text-align: center;
+            width: 100%;
+            position: fixed;
+            z-index: 15;
         }
 
-        .bday-text {
-            font-size: 2.2rem;
-        }
+        #birthday-banner { top: 5%; }
+        #birth-date-footer { bottom: 5%; letter-spacing: 4px; text-transform: uppercase; }
 
-        .bday-sub {
-            font-size: 1.2rem;
-            margin-top: 5px;
-            letter-spacing: 3px;
-            text-transform: uppercase;
-        }
+        .show { opacity: 1; }
+        #birthday-banner.show { transform: scale(1.05); }
+
+        .bday-text { font-size: 2.8rem; }
+        .bday-sub { font-size: 1.3rem; }
 
         #hour { z-index: 2; }
         #minute { z-index: 3; }
@@ -91,8 +78,11 @@
 </head>
 <body>
 
-    <div id="birthday-banner">
+    <div id="birthday-banner" class="gold-metallic-text">
         <h1 class="bday-text">Happy 31st Birthday, LCL!</h1>
+    </div>
+
+    <div id="birth-date-footer" class="gold-metallic-text">
         <p class="bday-sub">Born Feb. 5, 1995</p>
     </div>
 
@@ -132,31 +122,30 @@
 
         function startCelebration() {
             document.getElementById('birthday-banner').classList.add('show');
+            document.getElementById('birth-date-footer').classList.add('show');
             
-            // 設定延續 20 秒
-            const end = Date.now() + (20 * 1000);
+            const end = Date.now() + (20 * 1000); // 持續 20 秒
             const goldColors = ['#D4AF37', '#FFD700', '#B8860B', '#F7E7CE', '#996515'];
 
             (function frame() {
-                // 降低 particleCount 並調整 gravity 讓速度變慢
                 confetti({
                     particleCount: 1, 
                     angle: 60,
-                    spread: 55,
-                    origin: { x: 0, y: 0.8 },
+                    spread: 45,
+                    origin: { x: 0, y: 0.85 },
                     colors: goldColors,
-                    gravity: 0.6, // 預設為 1，調低會讓紙屑落得更慢
-                    ticks: 300,   // 增加紙屑存在時間
-                    zIndex: 1     // 關鍵：將紙屑層級設低，確保在手錶後方
+                    gravity: 0.45, // 極慢速落下
+                    ticks: 500,
+                    zIndex: 1 // 在手錶後方
                 });
                 confetti({
                     particleCount: 1,
                     angle: 120,
-                    spread: 55,
-                    origin: { x: 1, y: 0.8 },
+                    spread: 45,
+                    origin: { x: 1, y: 0.85 },
                     colors: goldColors,
-                    gravity: 0.6,
-                    ticks: 300,
+                    gravity: 0.45,
+                    ticks: 500,
                     zIndex: 1
                 });
 
